--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.59
-	loader_version=0.11.6
-
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.59
+loader_version=0.11.6
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.hamusuke
-	archives_base_name = damage-indicator-fabric
-
+mod_version=1.1.0
+maven_group=com.hamusuke
+archives_base_name=damage-indicator-fabric
 # Dependencies
-	fabric_version=0.40.1+1.17
+fabric_version=0.40.1+1.17
